# cthulhu-solo

./: .gitignore  Makefile  README.md  pyproject.toml
src/cthulhu/: cli.py  exceptions.py  game.py  main.py
src/cthulhu/box/: decks.py  dice.py  enemies.py  episodes.py  investigators.py  skills.py  tokens.py
src/cthulhu/box/definitions/investigators/: beth.yaml
src/cthulhu/box/resources/: elderones.yaml  enemies.yaml  investigators.yaml  s1ep1-map-3x3.txt  s1ep1-map-4x4.txt  s1ep1-map-5x3.txt  s1ep1.yaml  s1ep1_lab_tokens.yaml  sanity_deck.yaml  skills.yaml
src/cthulhu/game/: __init__.py
src/cthulhu/game/ui/cli/: __init__.py
src/cthulhu/game/ui/gui/: __init__.py
src/cthulhu/game/ui/tui/: __init__.py  mainscreen.tcss
src/cthulhu/game/ui/www/: __init__.py
src/cthulhu/seasons/: __init__.py  season1_episode1.py
src/cthulhu/tui/: mainscreen.py  mainscreen.tcss
src/cthulhu/utils/: graph.py
tests/: test_game.py  test_graph.py
