[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cthulhu-solo-tui"
version = "0.1.0"
description = "A solo TUI game inspired by Cthulhu Mythos"
authors = ["André Lopes <andre@labmice.io>"]
packages = [{ include = "cthulhu", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10"

# add an entry point for the game
transitions = "^0.9.0"
[tool.poetry.scripts]
cthulhu = "cthulhu.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"

