[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cthulhu-solo"
version = "0.1.0"
description = "A solo board game inspired by Cthulhu Death May Die by Mythos"
authors = ["André Lopes <andre@labmice.io>"]
packages = [{ include = "cthulhu", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10"
transitions = "^0.9.0"
jinja2 = "^3.1.3"
textual = "^0.52.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
python-json-logger = "^2.0.7"
networkx = "^3.3"

[tool.poetry.scripts]
cthulhu = "cthulhu.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"

